design+wr-data: record the parked single-dispatcher decision; log JVM noise + agent-modal focus-steal
- DESIGN-single-dispatcher.md: add the decided contract (ToolError plus a
  ToolResult trait, tools return Either, the sole @main owns all IO, FP
  values-not-side-effects), BR's worked NewTool example, the pure-vs-effectful
  driver nuance, and a safe incremental MIGRATED-list migration path so the
  toolbox never breaks mid-migration. Decision is parked to a scheduled session
  (memory guard: genscalator-toolbox-single-dispatcher) so tonight's tools stay
  in their committed object-scoped state.
- wr-data/genscalator-self-dev.md: sun.misc.Unsafe warning noise on every tt
  call (cry-wolf desensitization; the obvious suppression flag is rejected by
  this JDK, so the fix is TBD, not applied).
- wr-data/harness-ux.md: agent-initiated variant of the input-focus race — an
  AskUserQuestion modal interrupted BR mid-typing. The agent has no visibility
  into his compose state, so the rule is: no interrupting modals during
  autonomous flow; default and proceed, surface choices as plain text.